Closed Bug 1822421 Opened 1 year ago Closed 1 year ago

Fix code landed as bustage fix in bug 1822377

Categories

(Thunderbird :: Upstream Synchronization, defect)

Thunderbird 113
defect

Tracking

(thunderbird_esr102 fixed, thunderbird112 fixed)

RESOLVED FIXED
113 Branch
Tracking Status
thunderbird_esr102 --- fixed
thunderbird112 --- fixed

People

(Reporter: peter.schlemihl, Assigned: KaiE)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1822377 +++

Please use nsDependentCString(header_value) instead of allocating a new string:
https://hg.mozilla.org/comm-central/rev/d0cb7c43177e#l2.13

Flags: needinfo?(elizabeth)
Keywords: regression
Regressed by: 1822377
Summary: Fix code landed as bustage fix in bug 1822377. → Fix code landed as bustage fix in bug 1822377

Kindly redirecting this to Magnus to validate this suggestion.
If it makes sense could you take care of it?

Flags: needinfo?(elizabeth) → needinfo?(mkmelin+mozilla)
Assignee: nobody → kaie
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

yes it makes sense

Flags: needinfo?(mkmelin+mozilla)
Target Milestone: --- → 113 Branch

Usually no new variable is used:
https://searchfox.org/comm-central/search?q=nsDependentCString&path=&case=false&regexp=false
(but that's a matter of taste)

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/9a6cf93bb303
Use nsDependentCString to avoid unnecessary allocation. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED

Comment on attachment 9323121 [details]
Bug 1822421 - Use nsDependentCString to avoid unnecessary allocation. r=#thunderbird-reviewers

Please include this correctness fix when uplifting bug 1822377

Attachment #9323121 - Flags: approval-comm-esr102?
Attachment #9323121 - Flags: approval-comm-beta?

Comment on attachment 9323121 [details]
Bug 1822421 - Use nsDependentCString to avoid unnecessary allocation. r=#thunderbird-reviewers

[Triage Comment]
Approved for beta.

Attachment #9323121 - Flags: approval-comm-beta? → approval-comm-beta+

Comment on attachment 9323121 [details]
Bug 1822421 - Use nsDependentCString to avoid unnecessary allocation. r=#thunderbird-reviewers

[Triage Comment]
Approved for esr102

Attachment #9323121 - Flags: approval-comm-esr102? → approval-comm-esr102+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: