Bug 1822421 - Use nsDependentCString to avoid unnecessary allocation. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D172621

--HG--
extra : amend_source : efa48cc8d8ae350ffa9abcf9b7ec9c314e13c78a